--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "davejamesmiller/laravel-breadcrumbs",
+    "name": "thatobabusi/laravel-breadcrumbs",
     "description": "A simple Laravel-style way to create breadcrumbs.",
     "keywords": [
         "laravel"
     ],
-    "homepage": "https://github.com/davejamesmiller/laravel-breadcrumbs",
+    "homepage": "https://github.com/thatobabusi/laravel-breadcrumbs",
     "authors": [
         {
             "name": "Dave James Miller",
-            "email": "dave@davejamesmiller.com"
+            "email": "thatobabusi@yahoo.com"
         }
     ],
     "license": "MIT",
@@ -27,7 +27,7 @@
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "DaveJamesMiller\\Breadcrumbs\\": "classes/"
+            "ThatoBabusi\\Breadcrumbs\\": "classes/"
         }
     },
     "autoload-dev": {
@@ -39,10 +39,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "DaveJamesMiller\\Breadcrumbs\\BreadcrumbsServiceProvider"
+                "ThatoBabusi\\Breadcrumbs\\BreadcrumbsServiceProvider"
             ],
             "aliases": {
-                "Breadcrumbs": "DaveJamesMiller\\Breadcrumbs\\Facades\\Breadcrumbs"
+                "Breadcrumbs": "ThatoBabusi\\Breadcrumbs\\Facades\\Breadcrumbs"
             }
         }
     }
